--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -24,6 +24,19 @@ body {
   align-items: center;
 }
 
+::-webkit-scrollbar {
+  -webkit-appearance: none;
+}
+::-webkit-scrollbar:vertical {
+  width: 8px;
+}
+
+::-webkit-scrollbar-thumb {
+  border-radius: 4px;
+  background-color: rgba(255, 255, 255, 0.5);
+  box-shadow: 0 0 1px rgba(255, 255, 255, 0.5);
+}
+
 /* .button {
   width: 140px;
   margin: 10px;
